...
        <item>Kerge</item>
        <item>Keskmine</item>
        <item>Raske</item>
        <item>Ekspert</item>
    </string-array>

    <string name="specialCharNum">Lubatud on ainult tähed ja numbrid</string>
    <string name="specialChar">Nimes on lubatud ainult tähed</string>
    <string name="chars4">Kasutajanimi peab olema vähemalt 4 tähemärki pikk</string>
    <string name="fill">Täida väli</string>
    <string name="correctEmail">Sisesta korrektne e-mail</string>
    <string name="checkPw">Paroolid ei kattu</string>
    <string name="pwLength">Parool peab olema vähemalt 6 tähemärki pikk</string>

    <string name="osale">Osale</string>
    <string name="korraldaja">Korraldaja:</string>
    <string name="wait">Palun oota</string>
    <string name="vajutamataNupp">Lisa spordiala!</string>
    <string name="valimataSport">Spordiala või tase on jäänud valimata!</string>
...
