<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/registrateText"
        android:id="@+id/signUpText"
        android:textColor="#339933"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:textSize="32sp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/SignUpUserEdit"
        android:layout_gravity="center_horizontal"
        android:background="#fff1f1f1"
        android:fontFamily="sans-serif"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHint="#ff939393"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:layout_marginTop="30dp"
        android:paddingEnd="10dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textCapWords|textPersonName"
        android:hint="@string/eesnimi"
        android:ems="10"
        android:id="@+id/signUpNameEdit"
        android:background="#fff1f1f1"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:textColorHint="#ff939393"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textCapWords|textPersonName"
        android:hint="@string/perekonnanimi"
        android:ems="10"
        android:id="@+id/SignUpLastEdit"
        android:background="#fff1f1f1"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:textColorHint="#ff939393"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/layout1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sugu"
            android:id="@+id/textView2"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:id="@+id/radioGroup"
            android:layout_gravity="right"
            android:layout_marginLeft="20dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mees"
                android:id="@+id/r1"
                android:textColor="#818081"
                android:textSize="18sp"
                android:buttonTint="#818081"
                android:checked="true"
                android:layout_marginTop="5dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/naine"
                android:id="@+id/r0"
                android:textColor="#818081"
                android:textSize="18sp"
                android:checked="false"
                android:buttonTint="#818081"
                android:layout_marginTop="5dp" />
        </RadioGroup>

    </LinearLayout>

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/signUpMailEdit"
        android:hint="@string/email"
        android:background="#fff1f1f1"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textColorHint="#ff939393"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="5dp"
        android:paddingEnd="10dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/parool1"
        android:id="@+id/signUpPwEdit1"
        android:background="#fff1f1f1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textColorHint="#ff939393"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/parool2"
        android:fontFamily="sans-serif"
        android:id="@+id/signUpPwEdit2"
        android:background="#fff1f1f1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textColorHint="#ff939393"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/registrateText"
        android:textColor="#fff"
        android:id="@+id/signUpBtn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#40bf40"
        android:stateListAnimator="@null"
        android:onClick="createProfile"/>
</LinearLayout>