...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lisapilt"
        android:id="@+id/textView3"
        android:textColor="#ff41815b"
        android:layout_marginTop="80dp"
        android:textSize="32dp"
        android:layout_gravity="center_horizontal" />

    <ImageView
...
